--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     <title>Dublin</title>
   </head>
   <body>
-    <h1>hello</h1>
-    <p>welcome to dublin</p>
+    <h1>Dublin, a coastal city</h1>
+    <nav>
+      <ul>
+        <li>
+          <a href="index.html">city</a>
+        </li>
+        <li>
+          <a href="coast.html"></a>
+        </li>
+      </ul>
+    </nav>
   </body>
 </html>
